--- a/css/common.css
+++ b/css/common.css
@@ -36,12 +36,12 @@
 
 p{ font-family:var(--montserrat-regular) ;}
 span{ font-family:var(--montserrat-regular) ;}
-strong{ font-family:var(--montserrat-bold) ;}
-h1{ font-family:var(--roboto-black) ;}
-h2{ font-family:var(--Montserrat-Bold) ;}
+strong{ font-family:var(--Montserrat-ExtraBold);}
+h1{ font-family:var(--roboto-black);}
+h2{ font-family:var(--Montserrat-ExtraBold) ;}
 h3{ font-family:var(--montserrat-medium) ;}
 h4{ font-family:var(--Montserrat-ExtraBold) ;}
-h5{ font-family:var(--montserrat-bold) ;}
+h5{ font-family:var(--Montserrat-ExtraBold) ;}
 
 :root{
     --montserrat-light:"montserrat-light";
@@ -100,10 +100,13 @@ h5{ font-family:var(--montserrat-bold) ;}
     --line-height50:50px;
     --line-height66:66px;
     --box-shadow:rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    --social-shadow:1px 4px 2px 2px #C9D4D4;
     --card-shadow:rgba(0, 0, 0, 0.24) 0px 3px 8px;;
     --heading-support:linear-gradient(90deg, rgba(221,31,31,1) 17%, rgba(233,55,43,1) 35%, rgba(255,15,15,1) 50%, rgba(255,53,38,1) 100%);
+    --gradient-support:linear-gradient(to right, #ff6a00, #ee0979);
     --text-suppot:radial-gradient(circle, rgba(0,85,138,1) 35%, rgba(211,1,2,1) 100%);
     --text-shadow:linear-gradient(to right, #485b6c30, #0c546250);
+    --text-shadow2:#0004;
     --short-form: radial-gradient(circle at 100% 100%, #ffffff 0, #ffffff 3px, transparent 3px) 0% 0%/8px 8px no-repeat,
     radial-gradient(circle at 0 100%, #ffffff 0, #ffffff 3px, transparent 3px) 100% 0%/8px 8px no-repeat,
     radial-gradient(circle at 100% 0, #ffffff 0, #ffffff 3px, transparent 3px) 0% 100%/8px 8px no-repeat,
@@ -114,6 +117,12 @@ h5{ font-family:var(--montserrat-bold) ;}
     radial-gradient(at 100% 0%, #7e00ff 0%, rgba(0,0,0,0) 70%),
     radial-gradient(at 0% 0%, #ec00ff 0%, rgba(0,0,0,0) 70%),
     #ff0000;
+    --instagram:#d62976;
+    --facebook:#3b5998;
+    --twitter:#1DA1F2;
+    --linkedin:#0072b1;
+    --youtube:#FF0000;
+    --social-media:#E1F0F0;
     --pure-white:#fff;
     --dark-color:#2e2c2c;
     --badge:#dce622;
@@ -139,10 +148,12 @@ h5{ font-family:var(--montserrat-bold) ;}
     --m-hover-button:#b02117;
 
 }
-*{
+*,
+*::before,
+*::after{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
     font-family: 'montserrat-regular';
 }
 ul li {
@@ -156,6 +167,8 @@ a{
 html{
     font-size: 62.5%;
     overflow-x: hidden;
+    box-sizing: border-box;
+    height: 100%;
 }
 body{
     line-height: 1.2;
@@ -170,6 +183,7 @@ body{
     padding-right: 40px;
     padding-left: 40px;
   }
+
 /* ***********container part is END here..************** */
 
 .two-grid-template-column{
@@ -192,6 +206,16 @@ body{
     grid-template-columns: repeat(5,1fr) !important;
     gap: 0px 40px;
 }
+.close-icon2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    cursor: pointer;
+    display: none;
+}
+
 /* *****space-top every section********** */
 .Latest__Project__Gallery, 
 .explore__properties,
@@ -210,10 +234,13 @@ body{
 .Featured__Agents,
 .kalpataru__properties,
 .mumbai__properties,
-.search__bar 
+.search__bar,
+.Real__estate__properties__dubai 
 {
     margin-top: 20px;
 }
+
+/* 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 */
 
 /* ***********top-header-drop-down inside of the part*********** */
 :is(.sub-nearby,.popular,.other){
@@ -429,7 +456,7 @@ body{
     background:var(--m-hover-button) ;
  }
 .select_box{
-    color: var(--pure-white);
+    color: var(--pure-white) !important;
     font-size: var(--font-size15);
     line-height: var(--line-height50);
     text-decoration: none;
@@ -438,7 +465,7 @@ body{
     background:transparent;
     white-space: nowrap;
     text-overflow: ellipsis;
-    padding: 0px 10px;
+    padding: 5px 10px;
     width: 100%;
     max-width: 110px;
     border: 1px solid var(--heading-support);
@@ -447,8 +474,8 @@ body{
     border-radius: 8px 8px 0 0;
 }
 .select_box:hover,.select_box:visited{
-    background: var(--pure-white);
-    color:var(--button);
+    background: var(--pure-white) !important;
+    color:var(--button) !important;
 }
 .select_box .font-setting{
     transition:0.5s ease-in-out;
@@ -459,7 +486,7 @@ body{
 }
 .select_box .hasDropdown{
     position: relative;
-    padding:12px 4px;
+    padding:14px 4px;
    transition: 0.5s ease-in-out;
    cursor: pointer;
    border-radius: 10px;
@@ -472,7 +499,7 @@ font-size: var(--font-size16);
     opacity: 0;
     visibility: hidden;
     position: absolute;
-    top: 40px;
+    top: 56px;
     left: 4%;
     right: 0;
     width: 100%;
@@ -519,7 +546,7 @@ font-size: var(--font-size16);
 .setmenu li:first-child{
    padding-left: 0px;
 }
-.setmenu li:nth-child(7)::after{
+.setmenu li:nth-child(6)::after{
     content: '';
     position: absolute;
     width: 38px;
@@ -530,8 +557,8 @@ font-size: var(--font-size16);
     border-top-right-radius: 22px;
     transition: 0.5s ease-in-out;
 }
-.setmenu li:nth-child(7):hover::after{
-        background: red;
+.setmenu li:nth-child(6):hover::after{
+        /* background: red !important; */
         background:var(--pure-white)!important;
         box-shadow: 1px 0 5px -2px #888 !important;
 }
@@ -710,7 +737,7 @@ font-size: var(--font-size16);
 }
  .button2 {
     font-family:var(--montserrat-medium) ;
-    font-size: var(--font-size18);
+    font-size: var(--font-size16);
     background: var(--softpink);
     color: var(--para-tint-h4);
 	border: none !important;
@@ -918,6 +945,8 @@ font-size: var(--font-size16);
     padding: 10px !important;
     background: var(--temp-head-line) !important;
 }
+
+
 /* *********************cardblock**************************** */
 
 .card{
@@ -933,6 +962,87 @@ font-size: var(--font-size16);
     min-height: auto !important;
     padding: 10px 20px 20px !important;
 }
+.h-banner{
+    width: 300px;
+	height: 212px;
+	float: left;
+	text-align: center;
+	margin-top: 15px;
+	position: relative;
+	overflow: hidden;
+}
+.h-banner::before{
+    content:'';
+	width:0%;
+	height:0%;
+	float:left;
+	border-left:4px solid var(--pure-white);
+	border-top:4px solid var(--pure-white);
+	position:absolute;
+	left:0;
+	transition:0.5s;
+}
+.h-banner:hover::before{
+    width: 100%;
+	height: 100%;
+}
+.h-banner::after{
+    content:'';
+	width:0%;
+	height:0%;
+	float:left;
+	border-right:4px solid var(--pure-white);
+	border-bottom: 4px solid var(--pure-white);
+	position:absolute;
+	right:0;
+	bottom: 0;
+	transition:0.5s;
+}
+.h-banner:hover::after{
+    width: 100%;
+	height: 100%;
+}
+.outline__banner{
+    width: 100%;
+	height: 100%;
+	float: left;
+	text-align: center;
+	margin-top: 15px;
+	position: relative;
+	overflow: hidden;
+}
+.outline__banner::before{
+    content:'';
+	width:5%;
+	height:5%;
+	float:left;
+	border-left:6px solid var(--dark-blue-op);
+	border-top:6px solid var(--dark-blue-op);
+	position:absolute;
+	left:0;
+	transition:0.5s;
+}
+.outline__banner:hover::before{
+    width: 100%;
+	height: 100%;
+}
+.outline__banner::after{
+    content:'';
+	width:5%;
+	height:5%;
+	float:left;
+	border-right:6px solid var(--dark-blue-op);
+	border-bottom: 6px solid var(--dark-blue-op);
+	position:absolute;
+	right:0;
+	bottom: 0;
+	transition:0.5s;
+}
+.outline__banner:hover::after{
+    width: 100%;
+	height: 100%;
+}
+
 .h-setting{
     min-height: 300px !important;
     position: relative !important;
@@ -967,7 +1077,6 @@ font-size: var(--font-size16);
         position: relative;
         width: 100%;
         min-height: 150px !important;
-        position: relative;
         object-fit: cover;
         background-size: cover;
         transition: 0.5s ease-in-out;
@@ -999,7 +1108,6 @@ font-size: var(--font-size16);
     background:var(--text-shadow);
     width: 100%;
     height: 100%;
-   
 }
 
 .h-setting:hover figure figcaption{
@@ -1176,6 +1284,7 @@ font-size: var(--font-size16);
     text-transform: capitalize;
     overflow: hidden;
     font-stretch: extra-condensed;
+    font-weight: 600 !important;
     text-overflow: ellipsis;
     white-space: nowrap;
     transition: 0.5s ease-in-out;
@@ -1481,7 +1590,7 @@ font-size: var(--font-size16);
     line-height: 1;
 }
 main{
-    margin-top: 160px;
+    margin-top: 80px;
 }
 .see-all-prop{
     font-size: var(--font-size16);
@@ -1493,3 +1602,37 @@ main{
 .see-all-prop:hover{
     color: var(--red-main) !important;
 }
+.searching__city{
+    border-right: 1px solid red;
+    padding-right: 6px;
+}
+/* .w-a{
+    width: 180px !important;
+}
+.w-b{
+    width: 110px !important;    
+} */
+.magicsearch {
+    border: 2px solid var(--temp-head-line);
+    width: 250px;
+    height: 40px;;
+    border-radius: 11px;
+    outline: none;
+    color: var(--dark-blue-op);
+    background-color: transparent;
+    transition: all .5s cubic-bezier(.19,1,.5,1);
+    padding: 5px 10px;
+    font-size: var(--font-size20);  
+}
+.magicsearch::placeholder{
+    text-transform: capitalize;
+    color: var(--para-shade-op);
+    font-size: var(--font-size15);
+}
+.magicsearch:focus {
+    background-color: var(--softpink);
+    color: var(--dark-blue-op);
+}
+
+
+
