--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,336 @@
+/* ***********************search__bar__section*********************** */
+.search__bar{
+    width: 100%;
+	height: 440px;
+	float: left;
+	background: linear-gradient(45deg,#00558a,#D30102,#ff7200,#3406FF,#b02117);
+	margin-top: 25px;
+	animation: move linear 2s infinite;
+	background-size: 200% 200%;
+}
+@keyframes move {
+    0%{
+     background-position: 20% 0%
+ }
+ 
+   20%{
+     background-position: 40% 60%
+ }
+ 
+   40%{
+     background-position: 60% 20%
+ }
+ 
+   60%{
+     background-position: 40% 80%
+ }
+ 
+   80%{
+     background-position: 20% 70%
+ }
+ 
+ }
+ .main__heading__smartdeal__sec h1{
+    color: var(--pure-white);
+    font-weight: 700;
+    text-shadow: var(--text-shadow) !important;
+ }
+ .main__filter__section__subordinates__list{
+    padding-bottom: 15px;
+ }
+ .main__filter__section__subordinates__list ul li{
+    margin: 0px 20px;
+ }
+ .main__filter__section__subordinates__list ul li a{
+    color: var(--pure-white);
+    text-transform: capitalize;
+    font-family: var(--Montserrat-ExtraBold);
+    text-decoration: none;
+    position: relative;
+    cursor: pointer;
+    padding-bottom: 10px;
+ }
+ .main__filter__section__subordinates__list ul li a::after{
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 0%;
+    height: 3px;
+    background-color: var(--dark-blue-op);
+    transition: 0.5s ease-in-out;
+ }
+ .main__filter__section__subordinates__list ul li a:hover::after{
+    width: 100%;
+ }
+.banner__slider .fig-img{
+    min-height: 115px !important;
+}
+.search__bar .container .wrapper {
+    padding-top: 70px;
+}
+/* ***********************input-fieldset*********************** */
+.main__filter__search__bar__setting {
+    width: 800px;
+    height: 62px;
+    margin: 0 auto;
+    border-radius: 32px;
+    box-shadow: var(--box-shadow);
+    border: 1px solid var(--para-dark-h2);
+    background-color:var(--pure-white);
+    padding: 5px 2px 5px 10px;
+}
+.main__filter__search__bar__setting:hover,
+.main__filter__search__bar__setting:focus,
+.main__filter__search__bar__setting.active{
+    border: none;
+    outline: none;
+    border: 2px solid var(--light-blue-header);
+}
+.main__filter__search__bar__setting .input__fieldset .recent__search{
+    /* width: 240px;
+    height: 30px; */
+    display: flex;
+    padding: 4px 16px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    transition: 0.5s ease-in-out;
+    /* padding: 0 16px 0 12px;
+    line-height: 32px;
+    border-radius: 16px;
+    color: var(--pure-white);
+    width: 240px;
+    height: 30px;
+    cursor: default; */
+    /* background: var(--red-main) !important; */
+    /* font-size: var(--font-size16); */
+    /* max-width: 146px; */
+    /* text-transform: capitalize; */
+    /* text-decoration: none; */
+  
+}
+.main__filter__search__bar__setting .input__fieldset .recent__search .allision{
+    /* width: 220px; */
+    height: 30px;
+    margin-right: 5px;
+    vertical-align: bottom;
+    border: none;
+    outline: none;
+    padding: 0px 10px 0px 10px;
+    background: var(--softpink);
+    border: 1px solid var(--softpink);
+    margin-top: 6px;
+    color: var(--dark-blue-op);
+    display: inline-flex;
+    border-radius: 20px;
+}
+.conclusion{
+    height: 30px;
+    margin-right: 5px;
+    vertical-align: bottom;
+    border: none !important;
+    outline: none !important;
+    padding: 0px 10px 0px 10px;
+    background: var(--softpink);
+    border: 1px solid var(--softpink);
+    margin-top: 6px;
+    color: var(--dark-blue-op);
+    display: inline-flex;
+    border-radius: 20px;
+}
+.conclusion:focus,
+.conclusion.active{
+    border: none;
+    outline: none;
+}
+.main__filter__search__bar__setting .input__fieldset .recent__search .allision 
+.button__close__input__field__search {
+    font-size: var(--font-size16) !important;
+    color: var(--dark-blue-op);
+
+}
+/* .main__filter__search__bar__setting .input__fieldset .recent__search .checklist{
+    float: left;
+    width: 240px;
+    height: 30px;
+    border: none;
+    outline: none;
+    margin: 6px 16px 0 0;
+    border-right: 1px solid var(--temp-head-col);
+    padding-left: 12px;
+    position: relative;
+    display: flex !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
+    background: green;
+} */
+/* .main__filter__search__bar__setting .input__fieldset .recent__search .checklist{
+    float: left;
+    width: 240px;
+    height: 30px;
+    margin: 6px 16px 0 0;
+    border-right: 1px solid var(--temp-head-col);
+    padding-left: 12px;
+    position: relative;
+    display: flex !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
+} */
+
+/* .main__filter__search__bar__setting .input__fieldset .recent__search label{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+} */
+
+/* .input__fieldset::placeholder{
+    float: right;
+} */
+.main__filter__search__bar__setting .input__fieldset{
+    /* display: flex;
+    justify-content: space-between;
+    align-items: center; */
+    /* line-height: 61px; */
+    /* vertical-align: middle; */
+}
+
+/* .main__filter__search__bar__setting .input__fieldset .recent__search{
+    float: left;
+    width: 240px;
+    height: 30px;
+    margin: 6px 16px 0 0;
+    border-right: 1px solid var(--temp-head-col);
+    padding-left: 12px;
+    position: relative;
+    display: flex !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
+} */
+
+/* .main__filter__search__bar__setting .input__fieldset .recent__search .checklist::after{
+    content: "";
+    border-top: 2px solid red;
+    border-left: 2px solid red;
+    border-right: 2px solid red;
+    border-bottom: 2px solid red;
+    background: #ff7200;
+    display: block;
+    padding: 3px 8px;
+    border-radius: 16px;
+    width: 100px;
+    height: 20px;
+    color: var(--li-color);
+    opacity: 1;
+} */
+/* .main__filter__search__bar__setting .input__fieldset .recent__search .checklist:checked::after{
+
+    border-top: 2px solid green;
+    border-left: 2px solid green;
+    border-right: 2px solid green;
+    border-bottom: 2px solid green;
+    background: #a6f0a6;
+    width: 100px;
+    height: 20px;
+    padding: 3px 8px;
+    color: #fff;
+} */
+
+/* .main__filter__search__bar__setting .input__fieldset .recent__search .checkbox__searchbar{
+    padding: 0 16px 0 12px;
+    line-height: 32px;
+    border-radius: 16px;
+    color: var(--pure-white);
+    cursor: default;
+    background: var(--red-main) !important;
+    font-size: var(--font-size16);
+    max-width: 146px;
+    text-transform: capitalize;
+    text-decoration: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    transition: 0.5s ease-in-out;
+} */
+/* input{
+    width: calc(100% - 8px);
+    height: 36px;
+    line-height: 36px;
+    font-size: 16px;
+    color: #606060;
+    border: none;
+    outline: none;
+    padding: 0 0 0 8px;
+    font-family: Montserrat;
+    background: none;
+    margin-right: 16px;
+} */
+/* .main__filter__search__bar__setting .input__fieldset .recent__search .checkbox__searchbar input{
+    border: none;
+    outline: none;
+} */
+
+/* .main__filter__search__bar__setting .input__fieldset .recent__search .checkbox__searchbar span{
+    font-size: var(--font-size22) !important;
+    color: var(--pure-white);
+    padding: 0px 0px 0px 4px;
+} */
+
+ /* ****************Real__estate__properties__dubais modification**********************  */
+ .Real__estate__properties__dubai .fig-img{
+    position: relative;
+    width: 100%;
+    min-height: 100% !important;
+    object-fit: cover;
+    background-size: cover;
+    transition: 0.5s ease-in-out;
+    z-index: 1;
+ }
+ .Real__estate__properties__dubai .fig-img img{
+    width: 100%;
+    height: 99%;
+ }
+ .Real__estate__properties__dubai .fig-img .fig-caption{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background: var(--text-shadow2);
+    /* background:var(--text-shadow2); */
+    width: 100%;
+    height: 100%;
+}
+.Real__estate__properties__dubai .fig-img .fig-caption .property__bar__option h2{
+    font-size: var(--font-size36);
+	color: var(--pure-white);
+	padding: 50px 0 15px 0;
+	transform: translate(-100%);
+    text-transform: capitalize;
+    text-shadow: var(--short-form);
+    font-weight: 600;
+	transition: 2s ease-in-out;
+}
+.Real__estate__properties__dubai .fig-img:hover .fig-caption .property__bar__option h2{
+	transform: translate(-1%) !important;
+}
+.Real__estate__properties__dubai .fig-img .fig-caption .property__bar__option p{
+    transform: translate(110%);
+	font-size: var(--font-size16);
+	color: var(--pure-white);
+	padding: 0px 20px;
+    line-height: 1;
+    text-shadow: var(--short-form);
+}
+.Real__estate__properties__dubai .fig-img:hover .fig-caption .property__bar__option p{
+    transform: translate(0%);
+	transition: 3.1s ease-in-out;
+}
+.Real__estate__properties__dubai ul li{
+    list-style-type: circle;
+    list-style-position: inside;
+}
+
 /* ***********************kalpataru__properties*********************** */
 .leftside__img__card{
     width: 200px;
