--- a/css/slider.css
+++ b/css/slider.css
@@ -15,7 +15,9 @@
 .slider10 .slick-next:before,
 .slider10 .slick-prev:before,
 .slider11 .slick-next:before,
-.slider11 .slick-prev:before {
+.slider11 .slick-prev:before,
+.slider13 .slick-next:before,
+.slider13 .slick-prev:before {
   font-family: "fontawesome";
   font-size: var(--font-size30);
   color: var(--pure-white) !important;
@@ -42,7 +44,9 @@
 .slider10 .slick-next:hover:before,
 .slider10 .slick-prev:hover:before,
 .slider11 .slick-next:hover:before,
-.slider11 .slick-prev:hover:before  {
+.slider11 .slick-prev:hover:before,
+.slider13 .slick-next:hover:before,
+.slider13 .slick-prev:hover:before  {
   left: 55%;
 }
 
@@ -54,7 +58,8 @@
 .slider7 .slick-next,
 .slider9 .slick-next,
 .slider10 .slick-next,
-.slider11 .slick-next {
+.slider11 .slick-next,
+.slider13 .slick-next {
   right: -43px !important;
   top: 10px;
   background: var(--dark-blue-op) !important;
@@ -75,7 +80,8 @@
 .slider7 .slick-next:hover,
 .slider9 .slick-next:hover,
 .slider10 .slick-next:hover,
-.slider11 .slick-next:hover {
+.slider11 .slick-next:hover,
+.slider13 .slick-next:hover {
   background: var(--red-main) !important;
 }
 
@@ -99,7 +105,8 @@
 .slider7 .slick-prev,
 .slider9 .slick-prev,
 .slider10 .slick-prev,
-.slider11 .slick-prev {
+.slider11 .slick-prev,
+.slider13 .slick-prev {
   left: -43px !important;
   background: var(--dark-blue-op) !important;
   box-shadow: var(--box-shadow) !important;
@@ -122,7 +129,8 @@
 .slider7 .slick-prev:hover,
 .slider9 .slick-prev:hover,
 .slider10 .slick-prev:hover,
-.slider11 .slick-prev:hover {
+.slider11 .slick-prev:hover,
+.slider13 .slick-prev:hover {
   background: var(--red-main) !important;
 }
 
@@ -192,6 +200,16 @@
   top: 167px;
   left: -6px !important;
 }
+/* slider13 specific */
+.slider13 .slick-next {
+  top: 167px;
+  left: 97%;
+}
+
+.slider13 .slick-prev {
+  top: 167px;
+  left: -6px !important;
+}
 .slick-dots li{
   margin: 0 2px !important;
 }
@@ -244,14 +262,16 @@
   .slider7 .slick-prev,
   .slider9 .slick-prev,
   .slider10 .slick-prev,
-  .slider11 .slick-prev{
+  .slider11 .slick-prev,
+  .slider13 .slick-prev{
     left: 0px !important;
   }
   .slider6 .slick-next,
   .slider7 .slick-next,
   .slider9 .slick-next,
   .slider10 .slick-next,
-  .slider11 .slick-next{
+  .slider11 .slick-next,
+  .slider13 .slick-next{
     left: 95% !important;
   }
   .slider .slick-next, 
@@ -262,7 +282,8 @@
   .slider7 .slick-next,
   .slider9 .slick-next,
   .slider10 .slick-next,
-  .slider11 .slick-next{
+  .slider11 .slick-next,
+  .slider13 .slick-next{
     right: -12px !important;
   }
 }
