--- a/css/jquery.magicsearch.css
+++ b/css/jquery.magicsearch.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     font-size: 14px;
-    font-family: Consolas, Helvetica, Arial, sans-serif;
     box-sizing: border-box; }
   .magicsearch-wrapper input[disabled] {
     cursor: not-allowed;
@@ -21,9 +20,10 @@
   .magicsearch-wrapper .multi-item {
     position: relative;
     float: left;
-    background-color: #e4e4e4;
+    background-color: var(--m-button);
+    color: var(--pure-white);
     padding-right: 15px;
-    border-radius: 3px;
+    border-radius: 5px;
     border: 1px solid #aaa; }
     .magicsearch-wrapper .multi-item span {
       text-overflow: ellipsis;
@@ -39,7 +39,8 @@
     position: absolute;
     width: 12px;
     height: 12px;
-    right: 3px; }
+    right: 3px;
+    background: var(--pure-white); }
     .magicsearch-wrapper .multi-item-close:before, .magicsearch-wrapper .multi-item-close:after {
       content: '';
       height: 2px;
@@ -89,9 +90,9 @@
       .magicsearch-wrapper .magicsearch-box li.disabled {
         color: #d43f3a; }
       .magicsearch-wrapper .magicsearch-box li.selected {
-        background-color: #ddd; }
+        background-color:var(--temp-head-col); }
       .magicsearch-wrapper .magicsearch-box li.ishover {
-        background-color: #0097cf;
+        background-color: var(--dark-blue-op);
         color: #fff; }
       .magicsearch-wrapper .magicsearch-box li span.keyword {
         font-weight: bold; }
