--- a/css/slider.css
+++ b/css/slider.css
@@ -228,6 +228,9 @@
   align-items: center;
 
 }
+.slick-slide{
+  height: auto !important;
+}
 .modal2{
   width: 600px !important;
   height: 400px;
